@@ -8,6 +8,7 @@ DFHack Future
         Fixed a rare overflow issue that could cause crashes on Linux and OS X
         Stopped DF window from receiving input when unfocused on OS X
         Fixed issues with keybindings involving Ctrl-A and Ctrl-Z, as well as Alt-E/U/N on OS X
+        Multiple contexts can now be specified when adding keybindings
     Lua
         Scripts can be enabled with the built-in enable/disable commands
         A new function, reqscript(), is available as a safer alternative to script_environment()
